--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -5,11 +5,11 @@
 		<div class="mt-2 container">
 			<!-- Page Layout here -->
 		
-
+			<%- include('includes/alerts')%>
 
 			<div class="row ">
 				<div class="col l6 m12 s12">
-					<form class="card" action="/login_process" method="POST">
+					<form class="card" action="/signin_process" method="POST">
 						<h2>Sign in</h2>
 						<div class="row">
 							<div class="input-field col s12">
@@ -17,12 +17,12 @@
 								<label for="email">Email</label>
 							</div>
 							<div class="input-field col s12">
-								<input id="password" password="password" type="password" class="validate">
+								<input id="password" name="password"  type="password" class="validate">
 								<label for="password">Password</label>
 							</div>
 
 							<div class="col s12">
-								<button class="btn waves-effect waves-light" type="submit" name="action">Sign In
+								<button class="btn waves-effect waves-light" type="submit">Sign In
 									<i class="material-icons right">send</i>
 								</button>
 							</div>
