--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -14,7 +14,7 @@
 			<div class="row ">
 				<div class="col m12 s12 users">
 					<div class="card">
-						<table class="highlight">
+						<table class="highlight responsive-table">
 							<thead>
 							  <tr>
 								  <th>ID</th>
