--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -4,14 +4,26 @@
 			<a href="/" class="brand-logo">User Dashboard</a>
 			<a href="#" data-target="mobile-view" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
+				<% if(user == undefined){ %>
 				<li><a href="/signin">Sign In</a></li>
 				<li><a href="/register">Register</a></li>
+				<% }else{ %>
+				<li><a href="/edit/<%= user.user_id%>"><%= user.first_name%> <%= user.last_name%></a></li>
+				<li><a href="/logout">Logout</a></li>
+				<% }%>
 			</ul>
 		</div>
 	</div>
 </nav>
 
 <ul class="sidenav" id="mobile-view">
-	<li><a href="/sign_in">Sign In</a></li>
+	<% if(user == undefined){ %>
+	<li><a href="/signin">Sign In</a></li>
 	<li><a href="/register">Register</a></li>
+	<% }else{ %>
+	<li><a href="/edit/<%= user.user_id%>"><%= user.first_name%> <%= user.last_name%></a></li>
+	<li><a href="/logout">Logout</a></li>
+	<% }%>
+	<!-- <li><a href="/sign_in">Sign In</a></li>
+	<li><a href="/register">Register</a></li> -->
 </ul>
