--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -7,7 +7,7 @@
 		
 			<div class="row">
 				<div class="col s12 add-user-column">
-					<a href="/new" class="btn">Add user</a>
+					<a href="/new" class="btn">Add user </a>
 				</div>
 			</div>
 
@@ -27,7 +27,42 @@
 							</thead>
 					
 							<tbody>
-							  <tr>
+								<% for (let person in users) { %>
+								
+								<tr>
+									<td><%= users[person].id %></td>
+									<td><a href="/show/<%= users[person].id %>"><%= users[person].full_name %></a></td>
+									<td><%= users[person].email %></td>
+									<td><%= users[person].created_at %></td>
+									<td><%= (users[person].user_level == 1) ? "Normal" : "Admin" %></td>
+									<td>
+										
+										<% if (users[person].id != user.user_id) { %> 
+									
+										<a href="/edit/<%= users[person].id %>">Edit</a> | <a href="#modal<%= users[person].id %>" class="modal-trigger">Remove</a>
+										<div id="modal<%= users[person].id %>" class="modal">
+											<div class="modal-content">
+												<h4>Delete user: #<%= users[person].id %></h4>
+												<p>Are you sure ?</p>
+												<p>This action is irreversible, Are you sure you want to remove user: <%= users[person].email %></p>
+												<div class="border-bottom"></div>
+											</div>
+											<div class="modal-footer">
+											
+												<button type="button" class="modal-close waves-effect waves-red btn-flat red darken-4">Cancel</button>
+												<form action="/delete_user_process" method="POST">
+													<input type="hidden" name="user_id" value="<%= users[person].id %>">
+													<button type="submit" class=" waves-effect  btn-flat ">Delete <i class="material-icons right">delete</i></button>
+												</form>
+											</div>
+										</div>
+										<% } %>
+										
+
+									</td>
+								</tr>
+								<% } %>
+							  <!-- <tr>
 								<td>1</td>
 								<td><a href="/show/1">Ivan Christian Jay Funcion</a></td>
 								<td>icjfuncion@gmail.com</td>
@@ -42,8 +77,7 @@
 										  <div class="border-bottom"></div>
 										</div>
 										<div class="modal-footer">
-											<!-- <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a> -->
-											<!-- <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a> -->
+										
 											<button type="button" class="modal-close waves-effect waves-red btn-flat red darken-4">Cancel</button>
 											<form action="/delete_user_process" method="POST">
 												<input type="hidden" name="user_id" value="1">
@@ -52,9 +86,9 @@
 										</div>
 									</div>
 								</td>
-							  </tr>
+							  </tr> -->
 							 
-							
+							  
 							</tbody>
 						</table>
 					</div>
