--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -8,7 +8,7 @@
 				<li><a href="/signin">Sign In</a></li>
 				<li><a href="/register">Register</a></li>
 				<% }else{ %>
-				<li><a href="/edit/<%= user.user_id%>"><%= user.first_name%> <%= user.last_name%></a></li>
+				<li><a href="/edit"><%= user.first_name%> <%= user.last_name%></a></li>
 				<li><a href="/logout">Logout</a></li>
 				<% }%>
 			</ul>
@@ -21,7 +21,7 @@
 	<li><a href="/signin">Sign In</a></li>
 	<li><a href="/register">Register</a></li>
 	<% }else{ %>
-	<li><a href="/edit/<%= user.user_id%>"><%= user.first_name%> <%= user.last_name%></a></li>
+	<li><a href="/edit"><%= user.first_name%> <%= user.last_name%></a></li>
 	<li><a href="/logout">Logout</a></li>
 	<% }%>
 	<!-- <li><a href="/sign_in">Sign In</a></li>
