--- a/src/views/new.ejs
+++ b/src/views/new.ejs
@@ -4,6 +4,8 @@
 
 		<div class="mt-2 container">
 			<!-- Page Layout here -->
+
+			<%- include('includes/alerts')%>
 		
             <div class="row">
                 <div class="col s12 ">
@@ -13,7 +15,7 @@
 
 			<div class="row ">
 				<div class="col l6 m12 s12">
-					<form class="card" action="/register_process" method="POST">
+					<form class="card" action="/add_new_process" method="POST">
 						<h2>Add a new user</h2>
 						<div class="row">
 
