populate user email in edi information for user who is currently login

--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -18,17 +18,17 @@
 						<div class="row">
 
 							<div class="input-field col s12">
-								<input id="email" name="email" type="text" class="validate">
+								<input id="email" name="email" type="text" value="<%= user.email%>" class="validate">
 								<label for="email">Email</label>
 							</div>
 
 							<div class="input-field col s12">
-								<input id="firstname" name="firstname" type="text" class="validate">
+								<input id="firstname" name="firstname" value="<%= user.first_name%>"  type="text" class="validate">
 								<label for="firstname">Firstname</label>
 							</div>
 
 							<div class="input-field col s12">
-								<input id="lastname" name="lastname" type="text" class="validate">
+								<input id="lastname" name="lastname" value="<%= user.last_name%>" type="text" class="validate">
 								<label for="lastname">Lastname</label>
 							</div>
 
