--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -31,6 +31,7 @@
 			$(document).ready(function () {
 				$(".sidenav").sidenav();
 				$(".modal").modal();
+				$("select").formSelect();
 
 				var Modalelem = document.querySelector(".modal-error");
 				var instance = M.Modal.init(Modalelem);
