--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -1,9 +1,11 @@
 <%- include('includes/head')%>
 	<body>
 		<%- include('includes/nav')%>
+	
 
 		<div class="mt-2 container">
 			<!-- Page Layout here -->
+			<%- include('includes/alerts')%>
 		
             <div class="row">
                 <div class="col s12 ">
@@ -18,33 +20,35 @@
 						<div class="row">
 
 							<div class="input-field col s12">
-								<input id="email" name="email" type="text" value="<%= user.email%>" class="validate">
+								<input id="email" name="email" type="text" value="<%= user_to_edit.email %>" class="validate">
 								<label for="email">Email</label>
 							</div>
 
 							<div class="input-field col s12">
-								<input id="firstname" name="firstname" value="<%= user.first_name%>"  type="text" class="validate">
+								<input id="firstname" name="firstname" value="<%= user_to_edit.first_name%>"  type="text" class="validate">
 								<label for="firstname">Firstname</label>
 							</div>
 
 							<div class="input-field col s12">
-								<input id="lastname" name="lastname" value="<%= user.last_name%>" type="text" class="validate">
+								<input id="lastname" name="lastname" value="<%= user_to_edit.last_name%>" type="text" class="validate">
 								<label for="lastname">Lastname</label>
 							</div>
 
-
-							<!-- <div class="input-field col s12">
-								<input id="password" name="password" type="password" class="validate">
-								<label for="password">Password</label>
-							</div>
-
 							<div class="input-field col s12">
-								<input id="password" name="confirm_password" type="password" class="validate">
-								<label for="confirm_password">Confirm Password</label>
-							</div> -->
+								<select name="user_level">
+								  <!-- <option value="" disabled selected>Choose your option</option> -->
+								 
+								  <option  <%=(user_to_edit.user_level == 9) ? "selected" : "" %> value="9">Admin</option>
+								  <option  <%=(user_to_edit.user_level == 1) ? "selected" : "" %> value="1">Normal</option>
+								 
+								</select>
+								<label>User level</label>
+							  </div>
+
+
 
 							<div class="col s12 submit-button-section">
-                                <input type="hidden" name="user_id" value="1">
+                                <input type="hidden" name="user_id" value="<%= user_to_edit.id%>">
 								<button class="btn waves-effect waves-light" type="submit" name="action">Save
 									<i class="material-icons right">save</i>
 								</button>
@@ -66,7 +70,7 @@
 							</div>
 
 							<div class="input-field col s12">
-								<input id="password" name="confirm_password" type="password" class="validate">
+								<input id="confirm_password" name="confirm_password" type="password" class="validate">
 								<label for="confirm_password">Confirm Password</label>
 							</div>
 
