--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -61,21 +61,17 @@
                     <form class="card" action="/edit_password_process" method="POST">
 						<h2>Change Password</h2>
 						<div class="row">
-
-						
-
 							<div class="input-field col s12">
 								<input id="password" name="password" type="password" class="validate">
 								<label for="password">Password</label>
 							</div>
-
 							<div class="input-field col s12">
 								<input id="confirm_password" name="confirm_password" type="password" class="validate">
 								<label for="confirm_password">Confirm Password</label>
 							</div>
 
 							<div class="col s12 submit-button-section">
-                                <input type="hidden" name="user_id" value="1">
+								<input type="hidden" name="user_id" value="<%= user_to_edit.id%>">
 								<button class="btn waves-effect waves-light" type="submit" name="action">Save
 									<i class="material-icons right">save</i>
 								</button>
@@ -98,7 +94,7 @@
 							</div>
 
 							<div class="col s12 submit-button-section">
-                                <input type="hidden" name="user_id" value="1">
+								<input type="hidden" name="user_id" value="<%= user_to_edit.id%>">
 								<button class="btn waves-effect waves-light" type="submit" name="action">Save
 									<i class="material-icons right">save</i>
 								</button>
