--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -89,7 +89,7 @@
 						<div class="row">
 
 							<div class="input-field col s12">
-                                <textarea id="textarea1" id="discription" name="description" class="materialize-textarea"></textarea>
+                                <textarea id="textarea1" id="discription" name="description" class="materialize-textarea"><%= user_to_edit.description%></textarea>
                                 <label for="textarea1">Description</label>
 							</div>
 
