--- a/src/views/show.ejs
+++ b/src/views/show.ejs
@@ -17,15 +17,17 @@
 				</div>
                 <div class="col m12 s12 card">
                     <dl class="row mt-2 ">
-                        <dt class="col s3">Registered at : </dt>
-                        <dd class="col s9"><%= found_user.created_at %></dd>
-                        <dt class="col s3">User ID : </dt>
-                        <dd class="col s9"># <%= found_user.id %></dd>
-                        <dt class="col s3">Email : </dt>
-                        <dd class="col s9"><%= found_user.email %></dd>
-                        <dt class="col s3">Description : </dt>
-                        <dd class="col s9"><%= found_user.description %></dd>
+                        <dt class="col s6 m3">Registered at : </dt>
+                        <dd class="col s6 m9"><%= found_user.created_at %></dd>
+                        <dt class="col s6 m3">User ID : </dt>
+                        <dd class="col s6 m9"># <%= found_user.id %></dd>
+                        <dt class="col s4 m3">Email : </dt>
+                        <dd class="col s8 m9"><%= found_user.email %></dd>
+                        <dt class="col s6 m3">Description : </dt>
+                        <dd class="col s6 m9"><%= found_user.description %></dd>
+                        <!-- <p><%= found_user.description %></p> -->
                     </dl>
+                   
 				</div>
 			</div>
 
