date diff is working

--- a/src/views/comments.ejs
+++ b/src/views/comments.ejs
@@ -67,7 +67,7 @@
                 <div class="col s12 card message">
                    <div class="message-head">
                         <h2><%=get_comments[comment].full_name%></h2>
-                        <span >1 months ago</span>
+                        <span > <%=get_comments[comment].date_send%></span>
                    </div>
                    
                     <p><%=get_comments[comment].comment%></p>
