--- a/src/views/show.ejs
+++ b/src/views/show.ejs
@@ -64,7 +64,7 @@
                 <div class="col s12 card message">
                    <div class="message-head">
                         <h2><%= get_messages[message].full_name%></h2>
-                        <span >1 months ago</span>
+                        <span ><%= get_messages[message].date_send%></span>
                    </div>
                    
                     <p><%= get_messages[message].message%></p>
